Added license details to modified files.

--- a/configs/riscv64_defconfig
+++ b/configs/riscv64_defconfig
@@ -1,3 +1,5 @@
+# See COPYING file for the license details of GPLv2
+# Copyright 2020 Marno van der Maas
 BR2_riscv64=y
 BR2_TOOLCHAIN_EXTERNAL=y
 BR2_TOOLCHAIN_EXTERNAL_PATH="$(RISCV)"
